<resources>
    <string name="app_name">ParisSportifs</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="password_hint">Password</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="login_button_text">Login</string>
    <string name="reset_password_button">Reset your password</string>
    <string name="SignUp">Sign Up</string>
    <string name="verify_your_password">Verify your password</string>
    <string name="PasswordHint">Password ( 6 char with 2 digits minimum)</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="toastcheckyourmail">Success !</string>
    <string name="create_account_with_e_mail">Create Account with E-Mail</string>
    <string name="facebook_app_id">828310827320246</string>
    <string name="hintedittextcompetitionname">CompetitionName</string>
    <string name="championship_prompt">Select Championship</string>
    <string name="button_validatecreatescreen">Create</string>
    <string name="competition_s_name_etext">Competition\'s Name</string>
    <string name="pseudo_etextsignup">Pseudo</string>
    <string name="set_your_rating_scales">Set your rating-scales !</string>
    <string name="select_favorite_team">Select Your Favorite Team</string>
    <string name="action_settings">Settings</string>


    <string name="ForgotPassword">Mot de passe oublié ?</string>
    <string name="CreateNewAccount">Créer un nouveau compte !</string>
    <string name="cancel_login">L\'operation c\'est stoppé !</string>
    <string name="error_login">Une erreur c\'est produite</string>
    <string name="firebase_error_login">Erreur lors de la connexion à Firebase</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="derni_re_ligne_droite_avant_de_rejoindre_la_comp_tition_nous_aimerions_savoir_votre_quipe_favorite_n_oublie_pas_de_choisir_un_pseudo_avant_de_rejoindre_ton_groupe_merci_et_amusez_vous_bien">Dernière ligne droite avant de rejoindre la compétition, nous aimerions savoir votre équipe favorite, n\'oublie pas de choisir un pseudo avant de rejoindre ton groupe, merci et amusez vous bien !</string>
    <string name="SelectTeam">Select your Favorite Team !</string>
    <string name="AngersSCO">Angers SCO</string>
    <string name="ACBastia">AC Bastia</string>
    <string name="GirondinsBordeaux">Girondins Bordeaux</string>
    <string name="Caen">Caen</string>
    <string name="DijonFC">Dijon FC</string>
    <string name="EAGuingamp">EA Guingamp</string>
    <string name="Lorient">Lorient</string>
    <string name="Lille">Lille</string>
    <string name="Lyon">Lyon</string>
    <string name="Marseille">Marseille</string>
    <string name="Monaco">Monaco</string>
    <string name="Metz">Metz</string>
    <string name="Montpellier">Montpellier</string>
    <string name="Nancy">Nancy</string>
    <string name="Nantes">Nantes</string>
    <string name="Nice">OGC Nice</string>
    <string name="PSG">PSG</string>
    <string name="Rennes">Rennes</string>
    <string name="ASSE">ASSE</string>
    <string name="TFC">TFC</string>

    <string name="first">Platoche</string>
    <string name="second">El Fenomeno</string>
    <string name="before_last">Cireur de banc</string>
    <string name="last">Porteur d\'eau</string>
    <string name="derni_re_ligne_droite_avant_que_tu_rejoigne_le_vestiaire_en_tant_que_fan_de_foot_nous_aimerions_savoir_ton_quipe_favorite_ainsi_que_ton_pseudo_amuse_toi_bien">Dernière ligne droite avant que tu rejoigne le vestiaire: en tant que fan de foot nous aimerions savoir ton équipe favorite, ainsi que ton pseudo ! Amuse toi bien</string>
    <string name="email">Email</string>

</resources>
