<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mathieu.parissportifs.CreateCompetitionActivity">

    <EditText
        android:id="@+id/eTextNameYourCompetition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textShortMessage"
        android:hint="@string/competition_s_name_etext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.066" />

    <Spinner
        android:id="@+id/championship_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/championship_arrays"
        android:prompt="@string/championship_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTextNameYourCompetition"
        app:layout_constraintVertical_bias="0.085" />

    <Button
        android:id="@+id/button_validate_mycompetition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_validatecreatescreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/championship_spinner"
        app:layout_constraintVertical_bias="0.975" />



        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/set_your_rating_scales"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/championship_spinner" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="Score exact"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="284dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="134dp"
        android:layout_weight="1"
        android:text="1 N 2"
        android:textSize="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_editor_absoluteY="301dp"
        tools:layout_editor_absoluteX="92dp" />



            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="49dp"
                android:layout_marginTop="235dp"
                android:layout_weight="1"
                android:text="2"
                app:layout_constraintRight_toLeftOf="@+id/radioButton4"
                app:layout_constraintTop_toBottomOf="@+id/championship_spinner"
                android:layout_marginEnd="49dp"
                android:onClick="onRadioButtonClicked"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.783" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="235dp"
                android:layout_weight="1"
                android:text="1"
                app:layout_constraintHorizontal_bias="0.181"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/radioButton3"
                app:layout_constraintTop_toBottomOf="@+id/championship_spinner"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:onClick="onRadioButtonClicked"/>

        <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="381dp"
                android:layout_weight="1"
                android:text="4"
                app:layout_constraintHorizontal_bias="0.718"
                app:layout_constraintLeft_toRightOf="@+id/radioButton4"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="146dp"
                android:layout_weight="1"
                android:text="3"
                app:layout_constraintBottom_toTopOf="@+id/button_validate_mycompetition"
                app:layout_constraintHorizontal_bias="0.637"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/championship_spinner"
                app:layout_constraintVertical_bias="0.769"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:onClick="onRadioButtonClicked"/>



        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:onClick="onRadioButtonClicked"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="239dp"
            app:layout_constraintHorizontal_bias="0.024" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:onClick="onRadioButtonClicked"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.615"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="239dp" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="239dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.286" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="4"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="8dp"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintLeft_toRightOf="@+id/radioButton6"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="239dp"
            app:layout_constraintHorizontal_bias="0.591" />





</android.support.constraint.ConstraintLayout>
